kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: portfolio
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: portfolio
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: portfolio
  labels:
    app: mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongodb
